[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ndarray = "0.15.4"
bytes = "1.1.0"
lorawan-encoding = { git = "https://github.com/ivajloip/rust-lorawan.git" }
heapless = "0.7.8"
aes = { version = "0.6.0", optional = true }
cmac = { version = "0.5.1", optional = true }
generic-array = "0.14.4"
defmt = { version = "0.3.0", optional = true }