[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ndarray = "0.15.4"
bytes = "1.1.0"
lorawan-encoding = { git = "https://github.com/ivajloip/rust-lorawan.git" }
heapless = "0.7.8"
cmac = "0.6.0"
generic-array = "0.14.4"
defmt = { version = "0.3.0", optional = true }
crypto-mac = { version = "0.11", features = ["dev"] }
aes = { version = "0.7.5", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41